--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -5,6 +5,9 @@
     margin: 120px auto;
 }
 
-.form-control {
-    margin: 5px 0;
+.form-register {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: 120px auto;
 }
