--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -1,3 +1,6 @@
+body, html {
+    height: 100%;
+}
 .form-signin {
     width: 100%;
     max-width: 330px;
@@ -10,4 +13,15 @@
     max-width: 330px;
     padding: 15px;
     margin: 0 auto 120px auto;
+}
+
+.mainArticle, #root {
+    height: 100%;
+}
+
+.loadingPageLogin {
+    background-repeat: no-repeat;
+    background-image: url(https://images.unsplash.com/photo-1519671282429-b44660ead0a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c7faeeb52e6890389104334447aa8120&auto=format&fit=crop&w=1650&q=80);
+    background-size: 100% auto;
+    height: 100%;
 }
