--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -1,6 +1,9 @@
-body, html {
+body {
+    margin: 0;
     height: 100%;
+    overflow: hidden;
 }
+
 .form-signin {
     width: 100%;
     max-width: 330px;
@@ -20,8 +23,10 @@ body, html {
 }
 
 .loadingPageLogin {
+    position: absolute;
+    width: 100%;
     background-repeat: no-repeat;
-    background-image: url(https://images.unsplash.com/photo-1519671282429-b44660ead0a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c7faeeb52e6890389104334447aa8120&auto=format&fit=crop&w=1650&q=80);
-    background-size: 100% auto;
+    background-image: url("../Img/coffeedollar.jpg");
+    background-size: cover;
     height: 100%;
 }
