--- a/src/auth/register.css
+++ b/src/auth/register.css
@@ -4,3 +4,12 @@
     padding: 15px;
     margin: 120px auto 0 auto;
 }
+
+.form-control {
+    margin-bottom: 8px;
+}
+
+.btn-block {
+    opacity: 0.6;
+    border: 2px solid #de9391;
+}
