--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -1,8 +1,11 @@
 body {
     margin: 0;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
+
 
 .form-signin {
     width: 100%;
