--- a/src/auth/login.css
+++ b/src/auth/login.css
@@ -1,28 +1,19 @@
 body {
     margin: 0;
     height: 100%;
-    /* overflow: hidden; */
     padding-bottom: 20px;
-    padding-top: 20px;
 }
 
-
-.form-signin {
+.form-signin, .form-register {
     width: 100%;
-    max-width: 200px;
+    width: 300px;
     padding: 5px;
     margin: 2px auto;
+
 }
 
 .btn {
-
-}
-
-.form-register {
-    width: 100%;
-    max-width: 200px;
-    padding: 5px;
-    margin: 2px auto;
+    max-width: 100%;
 }
 
 .loadingPageLogin {
