--- a/src/home.css
+++ b/src/home.css
@@ -2,5 +2,9 @@
     width: 100%;
     max-width: 330px;
     padding: 15px;
-    margin: 120px auto 0 auto;
+    margin: 25px auto 0 auto;
+}
+
+.body {
+    padding: 0;
 }
